changed color scheme

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a {
 }
 
 a:hover {
-  color: #2eca6a;
+  color: #ffb900;
   text-decoration: none;
 }
 
@@ -120,7 +120,7 @@ a:hover {
 }
 
 .color-b {
-  color: #2eca6a;
+  color: #ffb900;
 }
 
 .color-d {
@@ -153,7 +153,7 @@ a:hover {
   bottom: -1px;
   width: 100%;
   height: 2px;
-  background-color: #2eca6a;
+  background-color: #ffb900;
   z-index: 2;
 }
 
@@ -206,7 +206,7 @@ a:hover {
 }
 
 .pagination-a .pagination .page-link:hover, .pagination-a .pagination .page-link:active, .pagination-a .pagination .page-link:focus {
-  background-color: #2eca6a;
+  background-color: #ffb900;
 }
 
 .pagination-a .pagination .page-link span {
@@ -233,11 +233,11 @@ a:hover {
 }
 
 .pagination-a .pagination .page-item.active .page-link {
-  background-color: #2eca6a;
+  background-color: #ffb900;
 }
 
 .a {
-  color: #2eca6a;
+  color: #ffb900;
   font-size: 1.3rem;
 }
 
@@ -342,7 +342,7 @@ a:hover {
   position: absolute;
   width: 70px;
   height: 4px;
-  background-color: #2eca6a;
+  background-color: #ffb900;
   bottom: 20px;
   left: 0;
 }
@@ -367,7 +367,7 @@ a:hover {
 }
 
 /*------/ Overlay /------*/
-.overlay-a {
+/* .overlay-a {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 27%, rgba(0, 0, 0, 0.65) 90%);
 }
 
@@ -381,7 +381,7 @@ a:hover {
 }
 
 /*------/ Owl carousel /------*/
-.owl-theme .owl-dots {
+/* .owl-theme .owl-dots {
   text-align: center;
   margin-top: 18px;
 }
@@ -403,11 +403,11 @@ a:hover {
 }
 
 .owl-theme .owl-dots .owl-dot:hover span {
-  background-color: #2eca6a;
+  background-color: #ffb900;
 }
 
 .owl-theme .owl-dots .owl-dot.active span {
-  background-color: #2eca6a;
+  background-color: #ffb900;
   width: 35px;
 }
 
@@ -457,7 +457,7 @@ a:hover {
   display: inline-block;
   transition: all 0.6s ease-in-out;
   color: #ffffff;
-  background-color: #2eca6a;
+  background-color: #ffb900;
   opacity: .9;
 }
 
@@ -476,16 +476,16 @@ a:hover {
   margin-left: 0px;
 }
 
-/*------/ Socials /------*/
+
 .socials-a .list-inline-item:not(:last-child) {
   margin-right: 25px;
-}
+}  */
 
 /* Back to top button */
 .back-to-top {
   position: fixed;
   display: none;
-  background: #2eca6a;
+  background: #ffb900;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -528,7 +528,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #2eca6a;
+  border-top: 6px solid #ffb900;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -573,12 +573,12 @@ a:hover {
 }
 
 .btn.btn-a:hover {
-  background-color: #2eca6a;
+  background-color: #ffb900;
   color: #000000;
 }
 
 .btn.btn-b {
-  background-color: #2eca6a;
+  background-color: #ffb900;
   color: #000000;
 }
 
@@ -588,7 +588,7 @@ a:hover {
 }
 
 .btn.btn-b-n {
-  background-color: #2eca6a;
+  background-color: #ffb900;
   color: #ffffff;
   border-radius: 0;
 }
@@ -603,13 +603,15 @@ a:hover {
 --------------------------------------------------------------*/
 .navbar-default {
   transition: all .5s ease-in-out;
-  background-color: #ffffff;
+  background-image: url("img/home_header_background.jpg") !important;
+  background-size: cover !important;
   padding-top: 28px;
   padding-bottom: 28px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   box-shadow: 1px 2px 15px rgba(100, 100, 100, 0.3);
 }
+
 
 .navbar-default .nav-search {
   color: #000000;
@@ -625,8 +627,10 @@ a:hover {
   backface-visibility: hidden;
 }
 
+
+
 .navbar-default.navbar-trans .nav-item, .navbar-default.navbar-reduce .nav-item {
-  position: relative;
+  /* position: relative; */
   padding-right: 10px;
   padding-bottom: 8px;
   margin-left: 0;
@@ -651,13 +655,13 @@ a:hover {
 
 .navbar-default.navbar-trans .nav-link:before, .navbar-default.navbar-reduce .nav-link:before {
   content: '';
-  position: absolute;
+  /* position: relative; */
   bottom: 5px;
   left: 0;
   width: 100%;
   height: 2px;
   z-index: 0;
-  background-color: #2eca6a;
+  background-color: #ffb900;
   transform: scaleX(0);
   transform-origin: right;
   transition: transform .2s ease-out, opacity .2s ease-out 0.3s;
@@ -682,9 +686,9 @@ a:hover {
   transform: scaleX(1);
 }
 
-.navbar-default.navbar-trans .nav-link:before {
-  background-color: #2eca6a;
-}
+/* .navbar-default.navbar-trans .nav-link:before {
+  background-color: #ffb900;
+} */
 
 .navbar-default.navbar-trans .nav-link:hover {
   color: #000000;
@@ -708,7 +712,7 @@ a:hover {
 }
 
 .navbar-default.navbar-reduce .nav-link:before {
-  background-color: #2eca6a;
+  background-color: #ffb900;
 }
 
 .navbar-default.navbar-reduce .nav-link:hover {
@@ -728,7 +732,7 @@ a:hover {
 
 .navbar-default .dropdown .dropdown-menu {
   border-top: 0;
-  border-left: 4px solid #2eca6a;
+  border-left: 4px solid #ffb900;
   border-right: 0;
   border-bottom: 0;
   transform: translate3d(0px, -40px, 0px);
@@ -743,7 +747,7 @@ a:hover {
 
 @media (min-width: 768px) {
   .navbar-default .dropdown .dropdown-menu {
-    border-top: 4px solid #2eca6a;
+    border-top: 4px solid #ffb900;
     border-left: 0;
     display: block;
     position: absolute;
@@ -760,13 +764,13 @@ a:hover {
 
 .navbar-default .dropdown .dropdown-menu .dropdown-item:hover {
   background-color: #ffffff;
-  color: #2eca6a;
+  color: #ffb900;
   transition: all 500ms ease;
 }
 
 .navbar-default .dropdown .dropdown-menu .dropdown-item.active {
   background-color: #ffffff;
-  color: #2eca6a;
+  color: #ffb900;
 }
 
 .navbar-default .dropdown:hover .dropdown-menu {
@@ -970,11 +974,11 @@ a:hover {
 }
 
 .intro .owl-theme .owl-dots .owl-dot:hover span {
-  background-color: #2eca6a;
+  background-color: #ffb900;
 }
 
 .intro .owl-theme .owl-dots .owl-dot.active span {
-  background-color: #2eca6a;
+  background-color: #ffb900;
 }
 
 .intro .intro-item {
@@ -1007,7 +1011,7 @@ a:hover {
 .intro .intro-body .price-a {
   color: #ffffff;
   padding: 1rem 1.5rem;
-  border: 2px solid #2eca6a;
+  border: 2px solid #ffb900;
   border-radius: 50px;
   text-transform: uppercase;
   letter-spacing: 0.030em;
@@ -1119,7 +1123,7 @@ a:hover {
 }
 
 .intro-single .title-single-box {
-  border-left: 3px solid #2eca6a;
+  border-left: 3px solid #ffb900;
 }
 
 .intro-single .title-single-box .title-single {
@@ -1329,7 +1333,7 @@ a:hover {
 .price-a {
   color: #ffffff;
   padding: .6rem .8rem;
-  border: 2px solid #2eca6a;
+  border: 2px solid #ffb900;
   border-radius: 50px;
   text-transform: uppercase;
   letter-spacing: 0.030em;
@@ -1339,7 +1343,7 @@ a:hover {
   width: 100%;
   position: absolute;
   z-index: 2;
-  background-color: #2eca6a;
+  background-color: #ffb900;
 }
 
 .card-info {
@@ -1479,7 +1483,7 @@ a:hover {
 
 .card-header-b .category-b {
   font-size: .9rem;
-  background-color: #2eca6a;
+  background-color: #ffb900;
   padding: .3rem .7rem;
   color: #313131;
   letter-spacing: 0.030em;
@@ -1553,7 +1557,7 @@ a:hover {
 
 .post-content .blockquote {
   padding: 1rem 3rem 1.7rem 3rem;
-  border-left: 3px solid #2eca6a;
+  border-left: 3px solid #ffb900;
   color: #000000;
 }
 
@@ -1656,7 +1660,7 @@ a:hover {
 
 .card-box-ico {
   padding: 1rem 3rem 1rem 2.5rem;
-  border: 5px solid #2eca6a;
+  border: 5px solid #ffb900;
 }
 
 .card-box-ico span {
@@ -1785,7 +1789,7 @@ a:hover {
 }
 
 .card-box-d:hover .card-overlay-hover {
-  background-color: #2eca6a;
+  background-color: #ffb900;
   opacity: .9;
 }
 
@@ -1839,7 +1843,7 @@ a:hover {
 }
 
 .sinse-box {
-  background-color: #2eca6a;
+  background-color: #ffb900;
   padding: 1rem 2rem;
   position: absolute;
   left: 15px;
@@ -1938,7 +1942,7 @@ a:hover {
 
 .testimonial-ico span {
   font-size: 1.8rem;
-  background-color: #2eca6a;
+  background-color: #ffb900;
   color: #ffffff;
   padding: .4rem 1rem;
   border-radius: 50px;
@@ -1979,7 +1983,7 @@ a:hover {
 # Contact Section
 --------------------------------------------------------------*/
 .form-as #sendmessage {
-  color: #2eca6a;
+  color: #ffb900;
   border: 1px solid #26a356;
   display: none;
   text-align: center;
@@ -2031,7 +2035,7 @@ a:hover {
 
 .form-as .form-control:focus {
   box-shadow: none;
-  border-color: #2eca6a;
+  border-color: #ffb900;
 }
 
 .php-email-form .validate {
@@ -2101,7 +2105,7 @@ a:hover {
 
 .php-email-form .form-control:focus {
   box-shadow: none;
-  border-color: #2eca6a;
+  border-color: #ffb900;
 }
 
 @-webkit-keyframes animate-loading {
@@ -2138,7 +2142,7 @@ a:hover {
 .section-footer .item-list-a i {
   font-size: 18px;
   padding-right: 4px;
-  color: #2eca6a;
+  color: #ffb900;
 }
 
 .section-footer .widget-a .w-title-a {
@@ -2149,6 +2153,7 @@ footer {
   background: #f3f3f3;
   text-align: center;
   padding: 30px 0;
+  margin-top: 10rem;
 }
 
 footer .copyright-footer {
